# crawler-project

./: .gitignore  .mcp.json  .python-version  CLAUDE.md  README.md  _analyze_gdtv.py  _decode_vm.py  count_modules.js  null  package-lock.json  pyproject.toml  save  save.ps1  xiaohongshu
.claude/: fix-paths.py  install-mcp.ps1  install-mcp.sh  install.config.json  settings.json  settings.local.json
.githooks/: auto-watch.py  post-commit  pre-push
.serena/: project.yml
Boss直聘/: Boss直聘.md  README.md  REVERSE_LOG.md  main.js  main.py  sign_boss.js  sign_boss_fsl2.js  sign_boss_v12.js  sign_boss_v13.js  sign_boss_v15b.js  sign_boss_v15c.js  sign_boss_v16.js  sign_boss_v7.js  sign_boss_v8.js  test_api.py  test_e2e.js  test_env.js  test_full_env.js  test_minimal_v12.js  test_trace_env.js  test_v8_global.js  test_v8_loop.py  trace2.js
QQ音乐/: Page.chunk.js  common.chunk.js  env_site.js  qqmusic_api.js  runtime.js  toplist.chunk.js  vendor.chunk.js
docs/: git-gitdoc-同步教程.md
spa14-scrape-center/: README.md  main.py
xiaohongshu/: 4291_async_chunk.js  crawler.py  debug_parse.py  decode_sign.py  ds_api.js  ds_api_response.js  env.js  env2.js  env3.js  env_proto.js  index.js  notes_page1.json  save_result.py  search_patterns.py  test_api.py  test_curl_cffi.py  test_v2.js  vendor-dynamic.js  vendor.js  xhs_final_result.json  xhs_notes_result.json
万达影城热映数据/: 02 万达影城热映数据.md  wanda_hot_movies.py
东航/: NOTES.md  README.md  TUTORIAL.md  api_bridge.py  config.example.json  config.json  cookies.json  crawler.py  crawler_camoufox.py  debug_cookies.py  sign.js
国家医保局/: README.md  (+86 more)
(+1076 files in other folders)
