[project]
name = "crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "cloakbrowser>=0.4.0",
    "curl-cffi>=0.15.0",
    "drissionpage>=4.1.0",
    "json5>=0.15.0",
    "playwright>=1.60.0",
    "pycryptodome>=3.23.0",
    "pyexecjs>=1.5.1",
    "requests>=2.34.2",
    "wasmtime>=45.0.0",
]
